Player Java 17 Support